public enum TipoDeDocumento {
  DNI, CUIL, CUIT, PASAPORTE
}
