public enum TipoDeOrganizacion {
  GUBERNAMENTAL, ONG, EMPRESA, INSTITUCION
}
