package models;

public interface MedioDeTransporte {
}
