@startuml diagrama-3

class Organizacion {
    razonSocial
    ubicacionGeografica
}

Organizacion -down-> "1" TipoDeOrganizacion
Organizacion -down-> "1" ClasificacionDeOrganizacion
Organizacion -down-> "1..*" Sector
Sector -up-> "1" Organizacion

enum TipoDeOrganizacion {
    GUBERNAMENTAL
    ONG
    EMPRESA
    INSTITUCION
}

enum ClasificacionDeOrganizacion {
    MINISTERIO
    UNIVERSIDAD
    ESCUELA
    EMPRESA_PRIMARIO
    EMPRESA_SECUNDARIO
    etc...
}

class Sector {
    solicitarVinculacion(miembro)
    vincular(miembro)
}

Sector -down-> "1..*" Miembro : vinculados
Miembro -up-> "1..*" Sector
Sector -down-> "0..*" Miembro : pendientes

class Miembro {
    String nombre
    String apellido
    String documento

    vincular(sector)
    darDeAltaTrayecto(trayecto)
}

Miembro -left-> "1" tipoDeDocumento
Miembro -down-> "1..*" Trayecto

enum tipoDeDocumento {
    DNI
    CUIT
    CUIL
    PASAPORTE
    etc...
}

class Trayecto {
}

Trayecto --> "1..*" Tramo

class Tramo {
    ubicacionInicial
    ubicacionFinal
}

Tramo -right-> "2" Ubicacion
Tramo -down-> "1" MedioDeTransporte

interface MedioDeTransporte {
}

MedioDeTransporte <|.. VehiculoParticular
MedioDeTransporte <|.. TransportePublico
MedioDeTransporte <|.. ServicioContratado
MedioDeTransporte <|.. BicicletaOAPie

class VehiculoParticular {
}

VehiculoParticular --> "1" TipoDeVehiculoParticular
VehiculoParticular --> "1" TipoDeCombustible

enum TipoDeVehiculoParticular {
    AUTOMOVIL
    CAMIONETA
    MOTOCICLETA
}

enum TipoDeCombustible {
    GNC
    NAFTA
    ELECTRICO
    GASOIL
}

class ServicioContratado {
    nombre
}

class BicicletaOAPie {
}

class TransportePublico {
    darDeAltaParada(tramo)
    tramosEntre(tramoInicial, tramoFinal)
}


enum TipoDeTransportePublico {
    TREN
    SUBTE
    COLECTIVO
}

class Linea {
}

TransportePublico --> "1" TipoDeTransportePublico
TransportePublico -up-> "1..*" Ubicacion

@enduml